--- a/KerbalScienceHistory.dproj
+++ b/KerbalScienceHistory.dproj
@@ -181,6 +181,7 @@ $(PostBuildEvent)]]></PostBuildEvent>
         <DCCReference Include="u_CFGReader.pas"/>
         <DCCReference Include="u_CFGScienceParser.pas"/>
         <DCCReference Include="u_CFGWrapper.pas"/>
+        <None Include="readme.txt"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -216,6 +217,12 @@ $(PostBuildEvent)]]></PostBuildEvent>
                 <DeployFile LocalName="KerbalScienceHistory.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>KerbalScienceHistory.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="New1.txt" Configuration="Release" Class="ProjectFile">
+                    <Platform Name="Win32">
+                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
